Fix text overflow

--- a/packages/mint-components/src/global/mixins.scss
+++ b/packages/mint-components/src/global/mixins.scss
@@ -70,6 +70,7 @@
     padding: var(--sl-spacing-large);
     background-color: var(--sqm-content-background);
     display: flex;
+    word-wrap: break-word;
   }
 }
 
